--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="src\audio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="include\convert\osu\beatmap.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\convert\osu\beatmap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\audio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\beatmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
