--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -150,13 +150,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\game\hitsound.h" />
+    <ClCompile Include="include\game\object.h" />
     <ClCompile Include="src\audio.cpp" />
     <ClCompile Include="src\convert\osu.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\audio.h" />
-    <ClInclude Include="include\beatmap.h" />
+    <ClInclude Include="include\format.h" />
+    <ClInclude Include="include\game\beatmap.h" />
     <ClInclude Include="include\convert\osu.h" />
     <ClInclude Include="include\main.h" />
   </ItemGroup>
