--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -71,14 +71,14 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>./vcpkg_installed/x64-windows/include/;./include;$(IncludePath)</IncludePath>
-    <LibraryPath>.\vcpkg_installed\x64-windows\lib\manual-link;./vcpkg_installed/x64-windows/lib/;$(LibraryPath)</LibraryPath>
+    <IncludePath>.\dependencies\pkg\osu-parser\include;./dependencies/vcpkg-installed/x64-windows/include/;./include;$(IncludePath)</IncludePath>
+    <LibraryPath>.\dependencies\vcpkg-installed\x64-windows\lib\manual-link;./dependencies/vcpkg-installed/x64-windows/lib/;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>./vcpkg_installed/x86-windows/include/;./include;$(IncludePath)</IncludePath>
-    <LibraryPath>.\vcpkg_installed\x86-windows\lib\manual-link;./vcpkg_installed/x86-windows/lib/;$(LibraryPath)</LibraryPath>
+    <IncludePath>./dependencies/pkg/osu-parser/include;./dependencies/vcpkg-installed/x86-windows/include/;./include;$(IncludePath)</IncludePath>
+    <LibraryPath>.\external\vcpkg-installed\x86-windows\lib\manual-link;./external/vcpkg-installed/x86-windows/lib/;./external/pkg/osu-parser/include;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
