--- a/.gitignore
+++ b/.gitignore
@@ -439,5 +439,5 @@ FodyWeavers.xsd
 vcpkg-manifest-install.log
 
 ## Manifest Mode
-dependencies/vcpkg-installed/
-vcpkg-installed/
+dependencies/vcpkg_installed/
+vcpkg_installed/
