--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/pkg/osu-parser"]
-	path = external/pkg/osu-parser
+[submodule "dependencies/pkg/osu-parser"]
+	path = dependencies/pkg/osu-parser
 	url = https://github.com/JustCabbage/osu-parser.git
