--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -73,13 +73,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>./include;$(IncludePath)</IncludePath>
+    <IncludePath>.\dependencies\pkg\osu-parser\include;./include;$(IncludePath)</IncludePath>
     <LibraryPath>.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib\manual-link;.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>./include;$(IncludePath)</IncludePath>
+    <IncludePath>.\dependencies\pkg\osu-parser\include;./include;$(IncludePath)</IncludePath>
     <LibraryPath>.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib\manual-link;.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
