--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependencies/pkg/osu-parser"]
-	path = dependencies/pkg/osu-parser
+[submodule "dependencies/osu-parser"]
+	path = dependencies/osu-parser
 	url = https://github.com/thnhmai06/osu-parser.git
