--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -73,14 +73,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>.\dependencies\pkg\osu-parser\include;./include;$(IncludePath)</IncludePath>
-    <LibraryPath>.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib\manual-link;.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.\dependencies\osu-parser\include;./include;$(IncludePath)</IncludePath>
+    <LibraryPath>.\vcpkg_installed\$(PlatformTarget)-windows\$(PlatformTarget)-windows\lib\manual-link;.\vcpkg_installed\$(PlatformTarget)-windows\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)obj\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>.\dependencies\pkg\osu-parser\include;./include;$(IncludePath)</IncludePath>
-    <LibraryPath>.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib\manual-link;.\dependencies\vcpkg_installed\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.\dependencies\osu-parser\include;./include;$(IncludePath)</IncludePath>
+    <LibraryPath>.\vcpkg_installed\$(PlatformTarget)-windows\$(PlatformTarget)-windows\lib\manual-link;.\vcpkg_installed\$(PlatformTarget)-windows\$(PlatformTarget)-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg">
     <VcpkgEnableManifest>true</VcpkgEnableManifest>
@@ -88,9 +88,7 @@
   <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <VcpkgInstalledDir>.\dependencies\vcpkg_installed</VcpkgInstalledDir>
   </PropertyGroup>
-  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <VcpkgInstalledDir>.\dependencies\vcpkg_installed</VcpkgInstalledDir>
-  </PropertyGroup>
+  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -156,16 +154,15 @@
   <ItemGroup>
     <ClCompile Include="include\game\hitsound.h" />
     <ClCompile Include="include\game\object.h" />
-    <ClCompile Include="src\audio.cpp" />
-    <ClCompile Include="src\convert\osu.cpp" />
+    <ClCompile Include="src\convert\osu\beatmap.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="include\utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\audio.h" />
-    <ClInclude Include="include\format.h" />
-    <ClInclude Include="include\game\beatmap.h" />
-    <ClInclude Include="include\convert\osu.h" />
-    <ClInclude Include="include\main.h" />
+    <ClInclude Include="include\file_format.h" />
+    <ClInclude Include="include\game\metadata.h" />
+    <ClInclude Include="include\convert\osu\beatmap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
