--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="dependencies\osu-parser\include\osu!parser\Parser\Structures\Beatmap\Sections\ColourSection.hpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\render\screen.cpp">
+    <ClCompile Include="src\render\update.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\render\shader.cpp">
@@ -68,7 +68,7 @@
     <ClInclude Include="include\expections\sdl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\render\screen.h">
+    <ClInclude Include="include\render\update.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\render\shader.h">
@@ -94,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="include\logging.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\main.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
