--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -177,7 +177,8 @@
     <ClInclude Include="include\audio\memory.h" />
     <ClInclude Include="include\config.h" />
     <ClInclude Include="include\expections\sdl.h" />
-    <ClInclude Include="include\file_format.h" />
+    <ClInclude Include="include\rule\difficulty.h" />
+    <ClInclude Include="include\rule\file_format.h" />
     <ClInclude Include="include\game\metadata.h" />
     <ClInclude Include="include\convert\osu\beatmap.h" />
     <ClInclude Include="include\main.h" />
