--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -62,7 +62,7 @@
     <ClInclude Include="include\convert\osu\beatmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\file_format.h">
+    <ClInclude Include="include\rule\file_format.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\expections\sdl.h">
@@ -96,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="include\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\rule\difficulty.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
