--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\render\update.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\thread\render.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\game\metadata.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\render\update.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\thread\render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
