--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -68,7 +68,7 @@
     <ClInclude Include="include\rule\file_format.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\exceptions\sdl.h">
+    <ClInclude Include="include\exceptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\audio\mixer.h">
