refactor: Cấu trúc lại Layer và TextureMemory

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="include\utilities.h" />
     <ClCompile Include="src\render\texture.cpp" />
+    <ClInclude Include="include\render\layer.h" />
     <ClInclude Include="include\thread\render.h" />
   </ItemGroup>
   <ItemGroup>
