--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dependencies\osu-parser\include\osu!parser\Parser\Structures\Beatmap\Sections\ColourSection.hpp" />
+    <ClCompile Include="src\render\layer.cpp" />
     <ClCompile Include="src\render\update.cpp" />
     <ClCompile Include="src\thread\render.cpp" />
     <ClInclude Include="include\game\hitsound.h" />
